--- a/src/components/styles/globals.css
+++ b/src/components/styles/globals.css
@@ -1,15 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/* 
 ::-webkit-scrollbar {
   display: none;
 }
 
 * {
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
+  -ms-overflow-style: none;
+  scrollbar-width: none; 
+} */
 
 /* .layout {
   
